--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ h2 {
   --text-color: #fff;
   --text-color-2: #f3f8fa;
   --bg-color: #0b0319;
-  --border-color: hsl(241, 88%, 68%);
+  --border-color: hsl(241, 100%, 79%);
 }
 
 html {
@@ -50,16 +50,11 @@ body {
   background-attachment: fixed;
   background-image: url("/img/YvUPGUK.jpg");
   font: 100%/1.6 "Open Sans", sans-serif; */
-  background-color: hsl(250, 24%, 9%);;
-  /* background: linear-gradient(343.07deg, rgba(132, 59, 206, 0.06) 5.71%, rgba(132, 59, 206, 0) 64.83%), transparent; */
-}
-
-.fondo {
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  position: absolute;
+  background-color: hsl(250, 24%, 9%);
   background-image: linear-gradient(38.73deg, rgba(204, 0, 187, 0.25) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.25) 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .encrip {
@@ -79,7 +74,7 @@ body {
   align-items: center;
   flex-direction: column;
   background-color: var(--bg-color);
-  border: 2px solid var(--border-color);
+  border: 1px solid var(--border-color);
   border-radius: 30px;
 }
 
@@ -96,7 +91,7 @@ body {
 .img-logo h1 {
   color: var(--text-color);
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
   text-transform: uppercase;
 }
@@ -108,7 +103,8 @@ body {
   -webkit-text-fill-color: #0000;
   font-size: 1.2rem;
   text-align: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  padding: 5px 0;
 }
 
 .input_output {
@@ -131,7 +127,7 @@ body {
   height: 90%;
   width: 50%;
   background-color: var(--bg-color);
-  border: 2px solid var(--border-color);
+  border: 1px solid var(--border-color);
   border-radius: 40px;
 
   /* From https://css.glass */
@@ -167,7 +163,7 @@ body {
   justify-content: center;
   background-color: var(--bg-color);
   border-radius: 2rem;
-  border: 2px solid var(--border-color);
+  border: 1px solid var(--border-color);
 }
 
 #mostrar-result p {
@@ -182,7 +178,7 @@ textarea {
   margin: 0 auto;
   padding: 1.5rem 2rem;
   border-radius: 2rem;
-  border: 2px solid var(--border-color);
+  border: 1px solid var(--border-color);
   transition: all 0.3s;
   height: 70%;
   width: 100%;
@@ -345,6 +341,10 @@ textarea:focus {
     justify-content: center;
     gap: 0;
     height: 65%;
+  }
+
+  .fondo {
+    height: auto;
   }
 
   /* .logo {
